# LLMarr

./: .gitignore  AGENTS.md  Dockerfile  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
llmarr/: __init__.py  __main__.py  auth.py  config.py  core.py  db.py  importer.py  oauth.py  parsing.py  pathmap.py  plexauth.py  selector.py  server.py  setup.py
llmarr/download/: __init__.py  base.py  qbittorrent.py
llmarr/indexers/: __init__.py  prowlarr.py
llmarr/metadata/: __init__.py  base.py  jikan.py  tmdb.py
llmarr/notify/: __init__.py  plex.py
llmarr/rss/: __init__.py  poller.py
tests/: conftest.py  test_activate.py  test_auth.py  test_config.py  test_core.py  test_db.py  test_importer.py  test_jikan.py  test_metadata_tmdb.py  test_oauth.py  test_parsing.py  test_pathmap.py  test_plex_import.py  test_plexauth.py  test_prowlarr.py  test_qbittorrent.py  test_selector.py  test_server.py  test_setup.py
