[project]
name = "llmarr"
version = "0.1.0"
description = "An MCP server that replicates Sonarr/Radarr/Lidarr-style automation (metadata, Prowlarr search, qBittorrent grabbing, Plex notify, RSS auto-grab), driven entirely through an LLM."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Himanshu Goel", email = "himanshu@hgoel.dev" }]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "qbittorrent-api>=2024.1.58",
    "plexapi>=4.15",
    "feedparser>=6.0",
]

[project.scripts]
llmarr = "llmarr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llmarr"]
