[project]
name = "llmarr"
version = "0.1.0"
description = "An MCP server that replicates Sonarr/Radarr/Lidarr-style automation (metadata, Prowlarr search, qBittorrent grabbing, Plex notify, RSS auto-grab), driven entirely through an LLM."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Himanshu Goel", email = "himanshu@hgoel.dev" }]
requires-python = ">=3.11"
keywords = ["mcp", "sonarr", "radarr", "prowlarr", "qbittorrent", "plex", "torrent", "automation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "qbittorrent-api>=2024.1.58",
    "plexapi>=4.15",
    "feedparser>=6.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/himanshugoel2797/LLMarr"
Repository = "https://github.com/himanshugoel2797/LLMarr"
Issues = "https://github.com/himanshugoel2797/LLMarr/issues"

[project.scripts]
llmarr = "llmarr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llmarr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
